--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meme Generator</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
 </head>
+
 <body class="bg-gray-100">
   <div class="container mx-auto px-4 max-w-8xl">
     <h1 class="text-4xl font-bold mb-4 mt-8 text-center">Meme Generator</h1>
     <form id="meme-form" class="text-center mb-4">
-      <input type="text" id="prompt-input" placeholder="Enter meme description..." class="w-64 bg-white shadow-md rounded-lg border border-gray-300 p-2 mr-2" />
-      <button id="generate-button" type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded ml-2">Generate Meme</button>
+      <input type="text" id="prompt-input" placeholder="Enter meme description..."
+        class="w-64 bg-white shadow-md rounded-lg border border-gray-300 p-2 mr-2" />
+      <button id="generate-button" type="submit"
+        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded ml-2">
+        Generate Meme
+      </button>
     </form>
-    <p id="loading" class="hidden text-center text-xl font-bold mb-4">Generating...</p>
+    <div id="loading-indicator" style="display: none;"
+      class="w-8 h-8 border-t-2 border-blue-500 rounded-full animate-spin mx-auto"></div>
+    <div id="comic-container"></div>
     <figure id="meme-container" class="relative max-w-[768] mx-auto hidden">
       <div class="relative w-full">
         <img id="meme-image" class="w-full h-auto block">
@@ -25,4 +33,5 @@
   </div>
   <script src="/client.js"></script>
 </body>
+
 </html>
