--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <div id="loading-indicator" style="display: none;"
       class="w-8 h-8 border-t-2 border-blue-500 rounded-full animate-spin mx-auto"></div>
     <div id="comic-container"></div>
-    <figure id="meme-container" class="relative max-w-[768] mx-auto hidden">
+    <figure id="meme-container" class="relative max-w-xl mx-auto hidden">
       <div class="relative w-full">
         <img id="meme-image" class="w-full h-auto block">
         <figcaption id="meme-text-wrapper" class="absolute bottom-0 left-0 right-0 mx-auto bg-black bg-opacity-50">
