fix: loading indicator margin

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       </button>
     </form>
     <div id="loading-indicator" style="display: none;"
-      class="w-8 h-8 border-t-2 border-blue-500 rounded-full animate-spin mx-auto"></div>
+      class="w-8 h-8 mb-4 border-t-2 border-blue-500 rounded-full animate-spin mx-auto"></div>
     <div id="comic-container"></div>
     <figure id="meme-container" class="relative max-w-xl mx-auto hidden">
       <div class="relative w-full">
