wip: trying html2canvas unsuccessfully

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
       </div>
     </figure>
   </div>
+  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
   <script src="/client.js"></script>
 </body>
 
