--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,8 @@
     </form>
     <div id="loading-indicator" style="display: none;"
       class="w-8 h-8 mb-4 border-t-2 border-blue-500 rounded-full animate-spin mx-auto"></div>
-    <div id="comic-container"></div>
     <figure id="meme-container" class="relative max-w-xl mx-auto hidden">
-      <div class="relative w-full">
+      <div id="meme-wrapper" class="relative w-full">
         <img id="meme-image" class="w-full h-auto block">
         <figcaption id="meme-text-wrapper" class="absolute bottom-0 left-0 right-0 mx-auto bg-black bg-opacity-50">
           <p id="meme-text" class="text-2xl md:text-4xl text-white font-bold text-center p-4"></p>
@@ -31,7 +30,7 @@
       </div>
     </figure>
   </div>
-  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
   <script src="/client.js"></script>
 </body>
 
