--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dumb Meme Generator</title>
+    <title>Meme Generator</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css"
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
   </head>
 
@@ -57,6 +61,25 @@
         </div>
       </div>
     </div>
+
+    <footer class="bg-gray-200 text-center py-4 mt-8 absolute bottom-0 w-full">
+      <a
+        href="https://buymeacoffee.com/vandyand"
+        class="text-blue-500 hover:underline mx-2"
+        ><i class="fas fa-coffee"></i
+      ></a>
+      <a
+        href="https://www.linkedin.com/in/vandyand/"
+        class="text-blue-500 hover:underline mx-2"
+        ><i class="fab fa-linkedin"></i
+      ></a>
+      <a
+        href="https://github.com/vandyand"
+        class="text-blue-500 hover:underline mx-2"
+        ><i class="fab fa-github"></i
+      ></a>
+    </footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
     <script src="/client.js"></script>
   </body>
